<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_accel"></TextView>
</TableRow><TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_x"
    />
<TextView  
	android:id="@+id/value_x"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />
</TableRow>
<TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_y"
    />
<TextView  
	android:id="@+id/value_y"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />
</TableRow>
<TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_z"
    />
<TextView  
	android:id="@+id/value_z"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />
</TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_total" android:id="@+id/label_totalAccel"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/value_total" android:text="@string/value_zero"></TextView>
</TableRow><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_mag"></TextView>

</TableRow><TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_x"
    />
<TextView  
	android:id="@+id/mag_x"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />

</TableRow>
<TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_y"
    />
<TextView  
	android:id="@+id/mag_y"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />
</TableRow>
<TableRow>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_z"
    />
<TextView  
	android:id="@+id/mag_z"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/value_zero"
    />

</TableRow><TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_total"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mag_total" android:text="@string/value_zero"></TextView>
</TableRow>

</TableLayout>
